# novel-ai-rust-api

./: .env.example  Cargo.toml  README.md
.trae/specs/novel-ai-api/: checklist.md  spec.md  tasks.md
data/: novel.db
docs/superpowers/specs/: 2026-06-02-ai-novel-api-design.md
migrations/: 20260602000001_init.sql
src/: config.rs  error.rs  lib.rs  main.rs  sse.rs
src/api/: mod.rs  routes.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
src/db/: pool.rs
src/handlers/: auth.rs  chapters.rs  characters.rs  generation.rs  health.rs  mod.rs  novels.rs  outlines.rs  projects.rs
src/middleware/: mod.rs  request_id.rs
src/models/: cache.rs  chapter.rs  character.rs  error.rs  health.rs  inference.rs  mod.rs  novel.rs  outline.rs  prediction.rs  project.rs  user.rs
src/observability/: metrics.rs  mod.rs  panic_guard.rs  redact.rs
src/prompts/: mod.rs
src/providers/: mod.rs  openai_compat.rs  registry.rs
src/repositories/: chapter_characters.rs  chapters.rs  characters.rs  mod.rs  novels.rs  outlines.rs  projects.rs  users.rs
src/services/: auth_service.rs  chapter_service.rs  character_service.rs  generation_service.rs  mod.rs  novel_service.rs  outline_service.rs  project_service.rs
tests/: api_test.rs  observability.rs
