[package]
name = "novel-ai-rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", features = ["json"] }
tokio = "*"
dotenv = "*"

[dev-dependencies]
actix-rt = "*"
actix-web-actors = "*"
