[package]
name = "novel-ai-rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-cors = "*"
actix-ratelimit = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", features = ["json"] }
tokio = "*"
dotenv = "*"
tracing = "*"
tracing-actix-web = "*"
tracing-subscriber = "*"
redis = "*"
utoipa = "*"
utoipa-swagger-ui = { version = "*", features = ["actix-web"] }
utoipa-redoc = "*"

[dev-dependencies]
actix-rt = "*"
actix-web-actors = "*"
