[package]
name = "novel-ai-rust-api"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
dotenvy = "0.15"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "4", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "migrate"] }
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = { version = "0.5", features = ["std"] }
rand = "0.8"
nanoid = "0.4"
thiserror = "1"
async-trait = "0.1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
prometheus = "0.13"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
actix-rt = "2"
wiremock = "0.6"
serial_test = "3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
